# conformal_routing

./: .gitignore  CODEX_GUIDE.md  README.md  pyproject.toml
configs/: conformal_aime.yaml  default.yaml  math_remote_qwen3.yaml  preliminary.yaml
outputs/preliminary/: raw_h_init.npz  raw_logit_confidence.npz  raw_self_consistency.npz  summary.json
outputs/preliminary_agreement/: debug_h_init.jsonl  debug_self_consistency.jsonl  raw_h_init.npz  raw_logit_confidence.npz  raw_self_consistency.npz  summary.json
scripts/: check_offline_assets.py  check_render_sanity.py  run_calibration.py  run_inference.py  run_preliminary_study.py
src/conformal_routing/: __init__.py  config_paths.py
src/conformal_routing/calibration/: __init__.py  base.py  collect.py  conformal.py  gmm.py  question_conditional.py
src/conformal_routing/data/: __init__.py  loaders.py
src/conformal_routing/eval/: __init__.py  answer_check.py  metrics.py
src/conformal_routing/models/: __init__.py  base.py  factory.py  openai_compatible.py  render.py  vllm_wrapper.py
src/conformal_routing/routing/: __init__.py  pipeline.py  safety.py
src/conformal_routing/signals/: __init__.py  base.py  h_init.py  logit_confidence.py  self_consistency.py
tests/: test_calibration.py  test_loaders.py  test_render_and_answer.py  test_repetition_stop.py  test_signals.py
